@@ -43,17 +43,19 @@ class DrillSidewaysScorer extends Scorer {
 
   private static final int CHUNK = 2048;
   private static final int MASK = CHUNK-1;
+  private final boolean scoreSubDocsAtOnce;
 
   private int collectDocID = -1;
   private float collectScore;
 
   DrillSidewaysScorer(Weight w, AtomicReaderContext context, Scorer baseScorer, Collector drillDownCollector,
-                      DocsEnumsAndFreq[] dims) {
+                      DocsEnumsAndFreq[] dims, boolean scoreSubDocsAtOnce) {
     super(w);
     this.dims = dims;
     this.context = context;
     this.baseScorer = baseScorer;
     this.drillDownCollector = drillDownCollector;
+    this.scoreSubDocsAtOnce = scoreSubDocsAtOnce;
   }
 
   @Override
@@ -77,7 +79,6 @@ class DrillSidewaysScorer extends Scorer {
 
     // Position all scorers to their first matching doc:
     baseScorer.nextDoc();
-
     for(DocsEnumsAndFreq dim : dims) {
       for(DocsEnum docsEnum : dim.docsEnums) {
         if (docsEnum != null) {
@@ -113,15 +114,22 @@ class DrillSidewaysScorer extends Scorer {
     }
     */
 
-    if (baseQueryCost < drillDownCost/10) {
+    //System.out.println("DS score " + scoreSubDocsAtOnce);
+    if (!scoreSubDocsAtOnce) {
+      if (baseQueryCost < drillDownCost/10) {
+        //System.out.println("baseAdvance");
+        doBaseAdvanceScoring(collector, docsEnums, sidewaysCollectors);
+      } else if (numDims > 1 && (dims[1].maxFreq < baseQueryCost/10)) {
+        //System.out.println("drillDownAdvance");
+        doDrillDownAdvanceScoring(collector, docsEnums, sidewaysCollectors);
+      } else {
+        //System.out.println("union");
+        doUnionScoring(collector, docsEnums, sidewaysCollectors);
+      }
+    } else {
+      // TODO: we should fallback to BS2 ReqOptSum scorer here
       //System.out.println("baseAdvance");
       doBaseAdvanceScoring(collector, docsEnums, sidewaysCollectors);
-    } else if (numDims > 1 && (dims[1].maxFreq < baseQueryCost/10)) {
-      //System.out.println("drillDownAdvance");
-      doDrillDownAdvanceScoring(collector, docsEnums, sidewaysCollectors);
-    } else {
-      //System.out.println("union");
-      doUnionScoring(collector, docsEnums, sidewaysCollectors);
     }
   }
 
